# medicimage

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CMakeUserPresets.json  README.md  compile_flags.txt  conan_vcpkg_toolchain.cmake  conanfile.txt  configure.bat
.github/: config.yml
cmake/: clangformat.cmake  setup_env.cmake
docs/: INCOMPLETE LIST of changes.docx  important changes.docx  medicimage_ui_design.drawio  ~$COMPLETE LIST of changes.docx  ~$portant changes.docx
docs/bugs/: Bugs 30-3-23.docx  Bugs 7-4-23.docx  ~$gs 30-3-23.docx
ext/: CMakeLists.txt
ext/json/: CMakeLists.txt
ext/stb/: CMakeLists.txt  stb_image.h  stb_image_resize.h
sandbox/: CMakeLists.txt  imgui.ini  main.cpp  opencv_tries.cpp  sandbox.cpp  sandbox_old.cpp
sandbox/assets/: imgui.ini
sandbox/fastdraw/: fastdraw.cpp
sandbox/layout/: example.cpp
sandbox/listctrl/: listtest.cpp  listtest.h
sandbox/printing/: printing.cpp
sandbox/splitter/: splitter.cpp  splitter.h
sandbox/wxwidgets_migration/: CMakeLists.txt  canvas.cpp  canvas.h  custom_events.h  editor.cpp  editor.h  frame.cpp  frame.h  main.cpp  thumbnails.cpp  thumbnails.h  toolbox.cpp  toolbox.h
sandbox/wxwidgets_migration/editor/: canvas.cpp  canvas.h  editor.cpp  editor.h  editor_events.cpp  editor_events.h
sandbox/wxwidgets_migration/thumbnails/: document_controller.cpp  document_controller.h  thumbnail_events.cpp  thumbnail_events.h  thumbnails.cpp  thumbnails.h
sandbox/wxwidgets_migration/toolbox/: attribute_editor.cpp  attribute_editor.h  attribute_editor_events.cpp  attribute_editor_events.h  bitmappane.cpp  bitmappane.h  toolbox.cpp  toolbox.h  toolbox_events.cpp  toolbox_events.h
scripts/: gen_splines.py  open_camera.py
src/: CMakeLists.txt  applicaiton.cpp  application.h  application_event.h  camera_api.h  editor_ui.cpp  editor_ui.h  event.cpp  event.h  example_log.json  image_editor.cpp  image_editor.h  image_loader.cpp  image_saver.cpp  image_saver.h  imgui_build.cpp  imgui_layer.cpp  imgui_layer.h  key_codes.h  key_event.h  layer.cpp  layer.h  log.cpp  log.h  medicimage.h  opencv_camera.cpp  opencv_camera.h  renderer.cpp  renderer.h  sandbox.cpp  sandbox_old.cpp  texture.cpp  texture.h  utils.cpp  utils.h  window.cpp  window.h
src/camera/: camera_api.h  opencv_camera.cpp  opencv_camera.h
src/core/: app_assert.h  assert.h  layer.cpp  log.cpp  log.h  utils.cpp  utils.h
src/drawing/: component_wrappers.cpp  component_wrappers.h  components.h  copmonents.h  drawing_sheet.cpp  drawing_sheet.h  entity.cpp  entity.h
src/event/: application_event.h  event.cpp
src/gui/: custom_events.h  frame.cpp  frame.h
src/gui/editor/: canvas.cpp  canvas.h  editor.cpp  editor.h  editor_events.cpp  editor_events.h
src/gui/thumbnails/: document_controller.cpp  document_controller.h  thumbnail_events.cpp  thumbnail_events.h  thumbnails.cpp  thumbnails.h
src/gui/toolbox/: attribute_editor.cpp  attribute_editor.h  attribute_editor_events.cpp  attribute_editor_events.h  bitmappane.cpp  bitmappane.h  toolbox.cpp  toolbox.h  toolbox_buttons.h  toolbox_events.cpp  toolbox_events.h
src/image_handling/: image_editor.cpp  image_editor.h  image_loader.cpp  image_loader.h  image_saver.cpp  image_saver.h
src/input/: application_event.h  event.cpp  event.h  key_codes.h  key_event.h
src/renderer/: renderer.cpp  renderer.h  texture.cpp  texture.h  window.cpp  window.h
src/ui/: attribute_editor.cpp  attribute_editor.h  editor_ui.cpp  editor_ui.h  imgui_build.cpp  imgui_layer.cpp  imgui_layer.h
src/widgets/: ImFileDialog.cpp  ImFileDialog.h
