cmake_minimum_required(VERSION 3.16)


#set(ENTT_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/entt2 CACHE INTERNAL "entt include path")
# opencv build config if needed, right now it is installed on the system, so not needed 
#set(BUILD_opencv_python_bindings_generator "" OFF)
#set(BUILD_opencv_python_tests "" OFF)
#set(BUILD_opencv_python3 "" OFF)
#set(BUILD_SHARED_LIBS "" OFF)
#set(BUILD_EXAMPLES "" OFF)
#set(BUILD_opencv_apps "" OFF)
#add_subdirectory(opencv)